Worked on hypergraphs

--- a/Conditional/HyperGraphMergingAlgorithm.tex
+++ b/Conditional/HyperGraphMergingAlgorithm.tex
@@ -3,11 +3,39 @@
 
 \begin{document}
 
+Formally, a vertex in a such a hypergraph is a pair $\left(n,p_i \right)$
+
 Given two hypergraphs $H_1$ and $H_2$ describing the same conditional effect $q$:
 
 Starting with the hyperedge describing the effect $q$, ie. $\left\{ q_1, \dots, q_{|q|}  \right\}$:
 
 Each argument $q_i$ of $q$ is now member of exactly one \emph{arg}-hyperedge in  both $H_1$ and $H_2$, denoted $e_1(q_i)$ and $e_2(q_i)$. For all nodes $v_j \in e_1(q_i)$, it holds that  if $v_j$ does not exist in $e_2(q_i)$, then it is not a precondition that the $i$'th argument of $q$ is the same as the $j$'th argument of $v$.
+
+\begin{proposition}
+    All vertices in a hypergraph $H$ is member of exactly one predicate edge and one binding edge.
+\end{proposition}
+
+\begin{definition}[Hyper edge intersection]
+    The intersection of two hyper edges $e_1$ and $e_2$ is a new hyperedge where the number of vertices with name $v_i$ is equal to the number of vertices with name $v_i$ in $e_1$ and $e_2$, multiplied. Formally:
+    \begin{equation*}
+        e_1 \sqcap e_2 = \left\{
+            f(v, t) \; | \;
+                v \in e_1 \land t \in e_2 \land v \approx t
+        \right\}
+    \end{equation*}
+\end{definition}
+
+\begin{definition}
+    Given two vertices with the same name, ie $v = \left(n, p_i \right)$ and $t = \left( m, p_i \right)$, $f(v,t)$ yields a new vertex with that name and an identifier based on $v$'s and $t$'s. $f$ must be injective, such that $f^{-1}(f(v,t)) = (v,t)$. In the following, we will use the shorthands $f^{-1}_1(f(v,t)) = v$ and $f^{-1}_2(f(v,t)) = t$.
+\end{definition}
+ A simple implementation of $f$ is tupling the identifiers of the arguement, ie:
+
+\begin{equation*}
+    f\left( \left(n, p_i \right), \left(m, p_i \right) \right) =
+        \left( (n,m), p_i \right)
+\end{equation*}
+Then, $f$ is clearly inversible, and $f^{-1}$ can be computed by decomposing the tuple. Note that with this implementation, repeated application of $f$ requires linear space.
+
 
 \begin{proposition}
     Given two binding edges $e_1$ and $e_2$ from hypergraphs $H_1$ and $H_2$, respectively; any node $v$ that only exists in \emph{either} $e_1$ or $e_2$ is discarded as a precondition, formally:
@@ -16,13 +44,88 @@ Each argument $q_i$ of $q$ is now member of exactly one \emph{arg}-hyperedge in 
     \end{equation*}
 \end{proposition}
 
-\begin{proposition}
-    Given two binding edges $e_1$ and $e_2$,
-\end{proposition}
+\begin{example}
+    \begin{equation*}
+        H = \forall x, y, z : q(x) \quad \textit{when} \quad
+            p(x,y) \land p(x,z)
+    \end{equation*}
 
-\begin{equation}
-    e \sqcap f =
-\end{equation}
+    \begin{equation}
+        \forall x, y : q(x) \quad \textit{when} \quad p(x,y)
+    \end{equation}
+
+    \begin{figure}
+        \centering
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \resizebox{\linewidth}{!}{\input{\master/Graphics/isomorphic.pgf}}
+            \caption{}
+            \label{fig:ex:ca:hgma:ex:isomorphic}
+        \end{subfigure}%
+        \hfill%
+        \begin{subfigure}[b]{0.4\textwidth}
+            \centering
+            \resizebox{0.8\linewidth}{!}{\input{\master/Graphics/isomorphicReduced.pgf}}
+            \caption{}
+            \label{fig:ex:ca:hgma:ex:isomorphic_reduced}
+        \end{subfigure}
+    \end{figure}
+\end{example}
+
+\begin{algorithm}
+    \caption{Binding edge merging algorithm}
+    \label{algo:bindingedgemerge}
+    \begin{algorithmic}
+        \Function {$\textsc{MergeBindingEdges}$} {$H_1, H_2, H', b_1, b_2$}
+            \State $b' \gets b_1 \sqcap b_2$
+            \State $H' \gets H' \cup b'$
+            \ForAll {vertices $v \in b'$}
+                \If {there is no predicate edge in $H'$ containing $v$}
+                    \State $p_1 \gets$ predicate set in $H_1$ containing $f_1^{-1}(v)$
+                    \State $p_2 \gets$ predicate set in $H_2$ containing $f_2^{-1}(v)$
+                    \State $H' \gets \textsc{MergePredicateEdges}
+                                        \left( H_1, H_2, H', p_1, p_2 \right)$
+                \EndIf
+            \EndFor
+            \State \Return $H'$
+        \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+    \caption{Predicate edge merging algorithm}
+    \label{algo:prededgemerge}
+
+    \begin{algorithmic}
+        \Function {$\textsc{MergePredicateEdges}$} {$H_1, H_2, H', p_1, p_2$}
+            \State $p' \gets p_1 \sqcap p_2$
+            \State $H' \gets H' \cup p'$
+            \ForAll {vertices $v \in p'$}
+                \If {there is no binding edge in $H'$ containing $v$}
+                    \State $b_1 \gets$ the binding edge in $H_1$ containing $f_1^{-1}(v)$
+                    \State $b_2 \gets$ the binding edge in $H_2$ containing $f_2^{-1}(v)$
+                    \State $H' \gets \textsc{MergeBindingEdges}
+                        \left( H_1, H_2, H', b_1, b_2 \right)$
+                \EndIf
+            \EndFor
+            \State \Return $H'$
+        \EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}
+    \caption{Hyper graph merging algorithm}
+    \label{algo:hypergraphmerge}
+    \begin{algorithmic}
+        \Function {$\textsc{MergeHyperGraphs}$} {$H_1$, $H_2$}
+            \State Let $q_1$ and $q_2$ denote the predicate hyper edges describing the effect in $H_1$ and $H_2$, respectively
+            \State Let $H' = \emptyset$ be a new, empty hyper graph
+            \State $H' \gets \textsc{MergePredicateEdges}(H_1,H_2,H',q_1,q_2)$
+            \State $H' \gets \textsc{CollapseHyperGraph}(H')$
+            \State \Return $H'$
+        \EndFunction
+    \end{algorithmic}
+\end{algorithm}
 
 \begin{example} \label{ex:ca:hgma:disconnected}
     \begin{equation*}
@@ -66,16 +169,16 @@ If, on the other hand, $v_j$ does exist in $e_2(q_i)$, then it cannot be discard
 
     \begin{figure}
         \centering
-        \begin{subfigure}[b]{0.3\textwidth}
+        \begin{subfigure}[b]{0.4\textwidth}
             \centering
-            \scalebox{1}{\input{\master/Graphics/hgEx2_1.pgf}}
+            \resizebox{\linewidth}{!}{\input{\master/Graphics/hgEx2_1.pgf}}
             \caption{}
             \label{fig:ex:ca:hgma:ex:generalization1}
         \end{subfigure}%
         \hfill%
-        \begin{subfigure}[b]{0.3\textwidth}
+        \begin{subfigure}[b]{0.4\textwidth}
             \centering
-            \scalebox{0.75}{\input{\master/Graphics/hgEx2_2.pgf}}
+            \resizebox{0.8\linewidth}{!}{\input{\master/Graphics/hgEx2_2.pgf}}
             \caption{}
             \label{fig:ex:ca:hgma:ex:generalization1}
         \end{subfigure}
@@ -83,43 +186,5 @@ If, on the other hand, $v_j$ does exist in $e_2(q_i)$, then it cannot be discard
     \end{figure}
 
 \end{example}
-
-
-
-it now holds that if there does not exist a node with the same name in $e_2(q_i)$, then it is
-
-Define hyperedge intersection ($e_1 \sqcap e_2$) as follows:
-\begin{equation}
-    \left\{
-        p \; | \; v \in e_1 \land t \in e_2 \land name(v) = name(t)
-    \right\}
-\end{equation}
-
-For each predicate $p$ in $H_1$ whose $k$'th argument is identical to the $i$'th argument of $q$
-
-\begin{easylist}[itemize]
-    \ListProperties(Progressive=3ex)
-    & For each $p(x_1, x_2, \dots, x_{|p|}) \in H_1$:
-    && For each $x \in (x_1, x_2, \dots, x_|p|)$:
-    &&& Collect all predicates $q$ in $H_1$ which has $x$ as argument.
-    &&& For each $q$:
-    &&&& Let $k$ be the argument places in $q$ which equals $x$
-    &&&& For each $k$:
-    &&&&& For each predicate $f$ with the same name as $q$ in $H_2$ for which $args(f)[k] = x$:
-    &&&&&&
-\end{easylist}
-
-\begin{equation}
-    c(x,k) =
-    \left\{
-        p \; | \; p \in H_2 \land name(p) \land args(p)[k] = x
-    \right\}
-\end{equation}
-
-\begin{equation}
-    \left\{
-        q \; | \; args(p) \cap args(q) \neq \emptyset
-    \right\}
-\end{equation}
 
 \end{document}
