Minor changes, now compiles

--- a/Conditional.tex
+++ b/Conditional.tex
@@ -17,6 +17,6 @@
 	\subfile{Conditional/HyperGraphMergingAlgorithm}
 
 \section{Hypothesis construction}
-	\subfile{Conditional/HypothesisConstruction}
+	% \subfile{Conditional/HypothesisConstruction}
 
 \end{document}
