Updated hyp con * added pes/confident

--- a/refs.bib
+++ b/refs.bib
@@ -34,3 +34,16 @@ year = {2011}
  edition = {2},
  publisher = {Pearson Education},
 }
+@article{putnam1957a,
+	title = {Three-valued logic},
+	language = {English},
+	publisher = {Kluwer Academic Publishers},
+	author = {Putnam, Hilary},
+	journal = {Philosophical Studies},
+	volume = {8},
+	number = {5},
+	pages = {73-80},
+	year = {1957},
+	issn = {00318116, 15730883},
+	doi = {10.1007/BF02304905}
+}
